Related packages api endpoint
