# openapi/api/v1/openapi.yaml
@@ -581,7 +581,72 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Package'
-  
+  /registries/{registryName}/packages/{packageName}/related_packages:
+    get:
+      summary: get a list of packages that are related to a package
+      operationId: getRegistryPackageRelatedPackages
+      tags:
+        - packages
+      parameters:
+        - in: path
+          name: registryName
+          schema:
+            type: string
+          required: true
+          description: name of registry
+        - in: path
+          name: packageName
+          schema:
+            type: string
+          required: true
+          description: name of package
+        - name: page
+          in: query
+          description: pagination page number 
+          required: false
+          schema:
+            type: integer
+        - name: per_page
+          in: query
+          description: Number of records to return 
+          required: false
+          schema:
+            type: integer
+        - name: created_after
+          in: query
+          description: filter by created_at after given time
+          required: false
+          schema:
+            type: string
+            format: date-time
+        - name: updated_after
+          in: query
+          description: filter by updated_at after given time
+          required: false
+          schema:
+            type: string
+            format: date-time
+        - name: sort
+          in: query
+          description: field to order results by
+          required: false
+          schema:
+            type: string
+        - name: order
+          in: query
+          description: direction to order results by
+          required: false
+          schema:
+            type: string
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Package'
   /registries/{registryName}/packages/{packageName}/versions:
     get:
       summary: get a list of versions for a package
@@ -762,8 +827,6 @@ components:
           type: string
         install_command:
           type: string
-        versions_url:
-          type: string
         metadata:
           type: object
         repo_metadata:
@@ -782,6 +845,12 @@ components:
         rankings:
           type: object
         purl:
+          type: string
+        versions_url:
+          type: string
+        dependent_packages_url:
+          type: string
+        related_packages_url:
           type: string
         maintainers:
           type: array
